--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <title> RANDOM </title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="container">
+
 <header>
   <nav>
     <div class="nav-wrapper">
@@ -17,7 +19,7 @@
   </nav>
 </header>
 
-<div class=row>
+<div class='row'>
   <div class="col s4"><a class="waves-effect waves-light btn" id="bevButton"><i class="material-icons left">local_bar</i>Let's Drink</a></div>
 
 
@@ -29,16 +31,19 @@
     <!-- <button type="button" name="button" id="personButton">GET PERSON</button> -->
 
 </div>
+<div class='row'>
+<div class="col s4">
+  <div class="bev ">  </div>
+  <div class="bev2 ">  </div> </div>
+  <div class="food col s4">  </div>
+  <div class="person col s4">  </div>
+</div>
 
-<div class="bev">  </div>
-  <div class="food">  </div>
-    <div class="person">  </div>
 
 
 
 
-
-
+</div>
   <script src="https://code.jquery.com/jquery-2.2.4.min.js"
   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
   crossorigin="anonymous"></script>
