--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> RANDOM </title>
+  <title> RANDOM NIGHT</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-
+<div class="container">
 <header>
   <nav>
     <div class="nav-wrapper">
@@ -21,36 +20,24 @@
 
 <div class='row'>
   <div class="col s4"><a class="waves-effect waves-light btn" id="bevButton"><i class="material-icons left">local_bar</i>Let's Drink</a></div>
-
-
-    <div class="col s4"><a class="waves-effect waves-light btn" id="foodButton"><i class="material-icons left">restaurant</i>Let's Eat</a></div>
-  <!-- <button type="button" name="button" id="foodButton">GET FOOD</button> -->
-
-
-    <div class="col s4"><a class="waves-effect waves-light btn" id="personButton"><i class="material-icons left">settings_phone</i>Let's Call</a></div>
-    <!-- <button type="button" name="button" id="personButton">GET PERSON</button> -->
-
+  <div class="col s4"><a class="waves-effect waves-light btn" id="foodButton"><i class="material-icons left">restaurant</i>Let's Eat</a></div>
+  <div class="col s4"><a class="waves-effect waves-light btn" id="personButton"><i class="material-icons left">settings_phone</i>Let's Call</a></div>
 </div>
+
 <div class='row'>
-<div class="col s4">
-  <div class="bev ">  </div>
-  <div class="bev2 ">  </div> </div>
+  <div class="col s4">
+    <div class="bev ">  </div>
+    <div class="bev2 ">  </div>
+  </div>
   <div class="food col s4">  </div>
   <div class="person col s4">  </div>
 </div>
-
-
-
-
-
 </div>
+
   <script src="https://code.jquery.com/jquery-2.2.4.min.js"
   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
   crossorigin="anonymous"></script>
   <script type ="text/javascript" src="main.js"></script>
 
-
-
 </body>
-
 </html>
