Initialize firebase hosting

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,19 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/3.7.0/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyC1KpxYAnNAuXZIGkyZWXmONzbQUU4P76E",
+      authDomain: "random-night.firebaseapp.com",
+      databaseURL: "https://random-night.firebaseio.com",
+      storageBucket: "random-night.appspot.com",
+      messagingSenderId: "811644479606"
+    };
+    firebase.initializeApp(config);
+  </script>
 </head>
 <body>
 <div class="container">
